Revert "refactored code to communicate with other modules."
This reverts commit 0ff89476dd0d5f9468ac36f078bba0857b29794e.