@@ -4,12 +4,12 @@ import com.ambulance.dispatch_system.common.entity.Ambulance;
 import com.ambulance.dispatch_system.common.entity.RoadEdge;
 import com.ambulance.dispatch_system.common.entity.RoadNode;
 import com.ambulance.dispatch_system.common.entity.enums.MedicalEquipment;
-import com.ambulance.dispatch_system.routing.service.RouteService;
-import com.ambulance.dispatch_system.routing.dto.RouteResponse;
+import com.ambulance.dispatch_system.network_detection.optimization.DijkstraBlindSpotOptimizer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -19,13 +19,13 @@ import static org.mockito.Mockito.when;
 
 class FitnessEvaluatorTest {
 
-    private RouteService routeService;
+    private DijkstraBlindSpotOptimizer dijkstraOptimizer;
     private FitnessEvaluator fitnessEvaluator;
 
     @BeforeEach
     void setUp() {
-        routeService = Mockito.mock(RouteService.class);
-        fitnessEvaluator = new FitnessEvaluator(routeService);
+        dijkstraOptimizer = Mockito.mock(DijkstraBlindSpotOptimizer.class);
+        fitnessEvaluator = new FitnessEvaluator(dijkstraOptimizer);
     }
 
     @Test
@@ -34,16 +34,10 @@ class FitnessEvaluatorTest {
         ambulance.setCurrentLocationNode("NodeA");
         ambulance.setEquipment(Set.of(MedicalEquipment.DEFIBRILLATOR));
 
-        RouteResponse response = new RouteResponse();
-        response.setTotalTravelTimeMinutes(0.0);
-        when(routeService.findRoute(any(), any())).thenReturn(response);
-
-        RoadNode nodeA = new RoadNode();
-        nodeA.setId(1L);
-        nodeA.setName("NodeA");
+        when(dijkstraOptimizer.calculateShortestTravelTime(any(), any(), any(), any())).thenReturn(0.0);
 
         double score = fitnessEvaluator.calculateFitness(ambulance, "NodeA", 
-                Set.of(MedicalEquipment.DEFIBRILLATOR), List.of(nodeA));
+                Set.of(MedicalEquipment.DEFIBRILLATOR), Collections.emptyList(), Collections.emptyList());
 
         assertEquals(0.0, score);
     }
@@ -54,21 +48,11 @@ class FitnessEvaluatorTest {
         ambulance.setCurrentLocationNode("NodeA");
         ambulance.setEquipment(Set.of(MedicalEquipment.DEFIBRILLATOR, MedicalEquipment.VENTILATOR));
 
-        RouteResponse response = new RouteResponse();
-        response.setTotalTravelTimeMinutes(15.5);
-        when(routeService.findRoute(any(), any())).thenReturn(response);
-
-        RoadNode nodeA = new RoadNode();
-        nodeA.setId(1L);
-        nodeA.setName("NodeA");
-        
-        RoadNode nodeB = new RoadNode();
-        nodeB.setId(2L);
-        nodeB.setName("NodeB");
+        when(dijkstraOptimizer.calculateShortestTravelTime(any(), any(), any(), any())).thenReturn(15.5);
 
         // 1 extra equipment = 5.0 penalty + 15.5 distance = 20.5
         double score = fitnessEvaluator.calculateFitness(ambulance, "NodeB", 
-                Set.of(MedicalEquipment.DEFIBRILLATOR), List.of(nodeA, nodeB));
+                Set.of(MedicalEquipment.DEFIBRILLATOR), Collections.emptyList(), Collections.emptyList());
 
         assertEquals(20.5, score);
     }
